update TS and PY

--- a/Javascript_Typescript/typescript_snippets.ipynb
+++ b/Javascript_Typescript/typescript_snippets.ipynb
@@ -2320,7 +2320,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Hey Jim,\n",
+    "---\n",
     "\n",
     "Omit and Pick are some of the most loved utility types in TypeScript. They let you create new types by excluding or selecting specific properties from an existing type.\n",
     "\n",
@@ -2447,7 +2447,147 @@
     "type DistributivePick<T, K extends keyof T> = T extends any\n",
     "  ? Pick<T, K>\n",
     "  : never;\n",
-    "```\n"
+    "```\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Types for getting the return type of an asynchronous function\n",
+    "type PromiseType<T> = T extends Promise<infer U> ? U : never\n",
+    "\n",
+    "export type ErrorType = { error: string }\n",
+    "\n",
+    "/**\n",
+    " * Represents the return type of an asynchronous function.\n",
+    " * It extracts the resolved value from a Promise and excludes any potential error type.\n",
+    " * Used primarily to get supabase action return types.\n",
+    " */\n",
+    "export type AsyncReturnType<T extends (...args: any) => Promise<any>> = Exclude<\n",
+    "  PromiseType<ReturnType<T>>,\n",
+    "  ErrorType\n",
+    ">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// retreiving keys from a deeply nested object\n",
+    "// https://itnext.io/how-to-create-a-type-to-retrieve-all-keys-of-an-object-in-typescript-a5739d1c23e2\n",
+    "\n",
+    "type DeepKeys<T> = T extends object\n",
+    "  ? {\n",
+    "      [K in keyof T]-?: K extends string | number\n",
+    "        ? `${K}` | `${K}.${DeepKeys<T[K]>}`\n",
+    "        : never;\n",
+    "    }[keyof T]\n",
+    "  : never;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "API Helper functions\n",
+    "\n",
+    "taken from: https://medium.com/the-syntax-diaries/your-typescript-apis-are-a-mess-heres-how-we-fixed-ours-c33908bb3e74"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// transform API responses into the correct format\n",
+    "function transformAPIUser(apiUser: ApiUser): User {\n",
+    "  return {\n",
+    "    id: apiUer.user_id,\n",
+    "    firstName: apiUser.first_name,\n",
+    "    settings: {\n",
+    "      theme: apiUser.settings.isDarkMode ? 'dark' : 'light',\n",
+    "      notifications: apiUser.settings.notificationsEnabled\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "// user type guards for runtime checks:\n",
+    "function isApiUser(data: unknown): data is ApiUser {\n",
+    "  if (!data || typeof data !== 'object') return false;\n",
+    "\n",
+    "  const user = data as any;\n",
+    "  return (\n",
+    "    typeof user.user_id === 'number' &&\n",
+    "    typeof user.first_name === 'string' &&\n",
+    "    typeof settings === 'object'\n",
+    "  )\n",
+    "}\n",
+    "\n",
+    "// call API using helpers\n",
+    "async function getUser(id: string): Promise<User> {\n",
+    "  const response = await fetch(`api/users/${id}`);\n",
+    "  const data = await response.json()\n",
+    "\n",
+    "  if (!isApiUser(data)) {\n",
+    "    throw new Error('Invalid API Response')\n",
+    "  }\n",
+    "\n",
+    "  return transformAPIUser(data)\n",
+    "}\n",
+    "\n",
+    "// for more flexibility, use a generic type guard\n",
+    "\n",
+    "function hasProperties<T extends object>( data: unknown, props: (keyof T)[]): data is Partial<T> {\n",
+    "  if (!data || typeof data !== 'object') return false; \n",
+    "  return props.every(prop => prop in data);\n",
+    "}\n",
+    "\n",
+    "// hasPropeties usage:\n",
+    "if (hasProperties<ApiUser>(DataTransfer, ['user_id', 'email'])) {\n",
+    "  // perform any ops since TS knows is has 'user_id' and 'email'\n",
+    "}\n",
+    "\n",
+    "// use decorators to transfrom a response\n",
+    "function transformResponse<T,U>(\n",
+    "  guard: (data: unkown) => data is T,\n",
+    "  transformer: (data: t) => U\n",
+    ") {\n",
+    "  return function (\n",
+    "    target: any,\n",
+    "    propertyKey: string,\n",
+    "    descriptor: PropertyDescriptor\n",
+    "  ){\n",
+    "    const original = descriptor.value;\n",
+    "\n",
+    "    descriptor.value = async function(...args: any[]) {\n",
+    "      const response = await original.apply(this, args);\n",
+    "      const data = await response.json();\n",
+    "\n",
+    "      if (!guard(data)) {\n",
+    "        throw new Error('Invalid API Response' + propertyKey)\n",
+    "      }\n",
+    "\n",
+    "      return transformer(data);\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "// decorator usage (needs a class)\n",
+    "\n",
+    "class UserApi {\n",
+    "  @transformResponse(isApiUser, transformAPIUser)\n",
+    "  async getUser(id: string): Promise<User> {\n",
+    "    return fetch('/api/users/' + id)\n",
+    "  }\n",
+    "}\n"
    ]
   }
  ],
