--- a/Python/python_snippets.ipynb
+++ b/Python/python_snippets.ipynb
@@ -375,6 +375,63 @@
     "- Using OCR cannot guarantee 100% accuracy. However, a computer-typed PDF document results in very high accuracy.\n",
     "- Handwritten PDFs are still recognized, but the accuracy depends on various factors like handwriting, page color, etc."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "how to extract price data out of a Zipline Bundle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from zipline.data.bundles.core import load\n",
+    "from zipline.data.data_portal import DataPortal\n",
+    "from zipline.utils.calendar_utils import get_calendar\n",
+    "\n",
+    "\n",
+    "# Load extensions if you have not already\n",
+    "load_extensions(True, [], False, os.environ)\n",
+    "\n",
+    "# Use your bundle's name\n",
+    "bundle_data = load(\"quotemedia\", os.environ, None)\n",
+    "\n",
+    "\n",
+    "as_of_date = pd.Timestamp(\"2024-01-01\")\n",
+    "symbols = [\"MSFT\", \"AMZN\", \"NVDA\"]\n",
+    "\n",
+    "# Get the method that looks up the asset from the Zipline Bundle\n",
+    "asset_finder = bundle_data.asset_finder\n",
+    "\n",
+    "# Get the list of Equity objects by string\n",
+    "assets = asset_finder.lookup_symbols(symbols, as_of_date=as_of_date)\n",
+    "\n",
+    "# Create a DataPortal which handles all the drama of finding the bundle\n",
+    "# and stitching together the bocolz files\n",
+    "data_portal = DataPortal(\n",
+    "    asset_finder=asset_finder,\n",
+    "    equity_daily_reader=bundle_data.equity_daily_bar_reader,\n",
+    "    trading_calendar=get_calendar(\"NYSE\"),\n",
+    "    first_trading_day=pd.Timestamp(\"2000-01-03\"),\n",
+    ")\n",
+    "\n",
+    "# Get the price data. Field can be open, high, low, close, or price.\n",
+    "data = data_portal.get_history_window(\n",
+    "    assets=assets,\n",
+    "    end_dt=pd.Timestamp(\"2023-12-31\"),\n",
+    "    bar_count=100,\n",
+    "    frequency=\"1d\",\n",
+    "    field=\"close\",\n",
+    "    data_frequency=\"daily\",\n",
+    "    ffill=True\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
